feat: add project

--- a/index.html
+++ b/index.html
@@ -58,11 +58,177 @@
                 </div>
                 <div class="section__manage-images">
                     <img src="assets/img/15.jpg" alt="">
-                    <img src="assets/img/Reminder events.jpg" alt="">
-                    <img src="assets/img/Reminder search.jpg" alt="">
-                    
+                    <img src="assets/img/Reminder events.jpg" class="second_img" alt="">
+                    <img src="assets/img/Reminder search.jpg" class="third_img" alt="">
                 </div>
         </section>
+        <section class="section__about">
+            <div class="section__about-info">  
+                <p>about us</p>
+                <h3>Read about our app</h3>
+            </div> 
+            <div class="section__about-svgs">
+                <img class="img-rel" src="assets/svg/Vector 2.svg" style="width: 19px; height: 19px;" alt="">
+                <img class="img-rel" src="assets/svg/Vector 2.4.svg" style="width: 19px; height: 19px;" alt="">
+                <img class="img-rel" src="assets/svg/Vector 2.5.svg" style="width: 19px; height: 19px;" alt="">
+                <img class="img-rel" src="assets/svg/Vector 2.6.svg" alt="">  
+            </div>        
+            <div class="section__about-titles">
+                <p>Overview</p>
+                <p>Files</p>
+                <p>Meeting chats</p>
+                <p>Save events</p>
+            </div>
+            <div class="section__about-text">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, voluptatibus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            </div>
+            <div class="section__about-buttons">
+                <input type="button" value="Read more">
+                <p>or</p>
+                <input type="button" value="Get started">
+            </div>
+        </section>
+        <section class="section__stats">
+            <div class="section__stats-backleft">
+                <div class="section__stats-left">
+                    <img src="assets/svg/faa.svg" alt=""> 
+                    <p>89%</p>
+                    <p>Customers who have increased their productivity</p>
+                </div>         
+            </div>   
+            <div class="section__stats-backright">
+                <div class="section__stats-right">
+                    <img src="assets/svg/Group 4.svg" alt="">
+                    <p>3123</p>
+                    <p>Users who have used our application</p>
+                </div>
+            </div>
+        </section>
+        <section class="section__slider">
+            <div class="section__slider-inf">
+                <p>our resources</p>
+                <h3>Start reading our blog</h3>
+            </div>
+            <img class="strela_first" src="assets/svg/strela.svg" alt="">
+            <div class="section__slider-wrapper">
+                <img src="assets/img/illustrations.jpg" alt="">
+            </div>
+            <div class="section__slider-wrappersec">
+                <p>How to start planning</p>
+                <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. 
+                    Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti. 
+                    Natum petentium principes mei ea. Tota everti periculis vis ei, quas tibique pro at, eos ut decore ...</p>
+                <input type="button" value="Read now"><input type="button" value="Add to your bookmarks">
+            </div>
+            <img class="strela_sec" src="assets/svg/strela21.svg" alt="">
+            <div class="section__slider-dots">
+                <span class="dot active"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
+        </section>
+        <section class="section__quotes">
+            <div class="section__quotes-inf">
+                <p>testimonials</p>
+                <h3>Customers's quotes</h3>
+                <p>Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an.</p>
+            </div>
+            <div class="section__quotes-quot">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus esse saepe officia laboriosam. Similique incidunt doloribus praesentium atque.</p>
+            </div>
+            <img src="assets/img/Ellipse 2.1.jpg" alt="">
+            <div class="section__quotes-dots">
+                <span class="dot_sec active"></span>
+                <span class="dot_sec"></span>
+                <span class="dot_sec"></span>
+                <span class="dot_sec"></span>
+                <span class="dot_sec"></span>
+                <span class="dot_sec"></span>
+                <span class="dot_sec"></span>
+                <span class="dot_sec"></span>
+                <span class="dot_sec"></span>
+            </div>
+        </section>
+        <section class="section__questions">
+            <div class="section__questions-inf">
+                <p>customer help</p>
+                <h3>Frequently asked questions</h3>
+            </div>
+            <div class="section__questions-mainblock">
+                <div class="section__questions-block1">
+                    <img src="assets/svg/strelaniz.svg" alt="">
+                    <p>Reque insolens in vel?</p>
+                </div>
+                <div class="section__questions-block2">
+                    <img src="assets/svg/strelaniz.svg" alt="">
+                    <p>Vis rebum error graecis ea, id sit postea accusamus?</p>
+                </div>
+                <div class="section__questions-block3">
+                    <div class="section__questions-block3fix">
+                        <img src="assets/svg/strelaverh.svg" alt="">
+                        <p>Lorem repudiandae ne nec?</p>
+                    </div>
+                    <div class="section__questions-block4fix">
+                        <p>Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.</p>
+                        <input type="button" value="Go to documentation">
+                    </div>
+                </div>
+                <div class="section__questions-block4">
+                    <img src="assets/svg/strelaniz.svg" alt="">
+                    <p>Ad dicit numquam vel. Et eos iudico feugait percipitur?</p>
+                </div>
+                <div class="section__questions-block5">
+                    <img src="assets/svg/strelaniz.svg" alt="">
+                    <p>Sea no dico percipitur. Fierent constituam definitiones id eum?</p>
+                </div>
+            </div>
+        </section>
+        <section class="section__started">
+            <div class="section__started-inf">
+                <p>play your life</p>
+                <h2>Get <span>started</span> now</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae, velit dignissimos ratione fugit id modi sit esse facilis tenetur mollitia!
+                </p>
+                <input type="button" value="View pricing"><input type="button" value="Read documentation"> 
+            </div>
+        </section>
+        <section class="section__sign">
+            <div class="section__sign-inf">
+                <h3>Sign up for newsletter</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, laudantium?</p>
+            </div>
+            <div class="section__sign-inputs">
+                <input type="text" name="inputBox" placeholder="Email address">
+                <input type="button" value="Save me">
+            </div>
+        </section>
+        <footer class="footer">    
+            <div class="footer-container">
+                <div class="footer-navi">
+                    <img src="assets/img/logo.jpg" alt="">
+                    <ul class="footer-navigation">
+                        <li>Home</li>
+                        <li>Blog</li>
+                        <li>Features</li>
+                        <li>Pracing</li>
+                        <li>Documentation</li>
+                    </ul>
+                </div>    
+                <div class="footer-links">
+                    <a href=""><img src="assets/svg/facebook.svg" alt=""></a>
+                    <a href=""><img src="assets/svg/telegram.svg" alt=""></a>
+                    <a href=""><img src="assets/svg/twitter.svg" alt=""></a>
+                    <a href=""><img src="assets/svg/m.svg" alt=""></a>
+                </div>
+                <div class="footer-button">
+                    <input type="button"class="button-top" value="Get started">
+                </div>               
+            </div>
+            <p class="copyright">Copyright © 2021 by MaZzzyrko</p>
+        </footer>
     </main>
 </body>
 </html>
